<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Buttons_extendedLonious">

    <TextView
        android:id="@+id/escoger"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:text="ESCOGE LAS QUE QUIERAS"
        android:textSize="25dp"
        android:layout_marginLeft="10dp"/>

    <CheckBox
        android:id="@+id/chkMarcam"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:checked="false"
        android:text="@string/marcam"
        android:textSize="17dp" />

    <CheckBox
        android:id="@+id/chk2"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginLeft="10dp"
        android:checked="false"
        android:text="@string/ami"
        android:textSize="17dp" />

    <CheckBox
        android:id="@+id/chk3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:checked="false"
        android:text="@string/goz"
        android:textSize="17dp" />

    <TextView
        android:id="@+id/escoger2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical"
        android:text="QUE ESCOGES"
        android:textSize="25dp" />

    <RadioGroup
        android:id="@+id/grbGrup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rbOpcio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcio1"
            android:textSize="17dp" />

        <RadioButton
            android:id="@+id/rbOpcio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcio2"
            android:textSize="17dp" />

        <RadioButton
            android:id="@+id/rbOpcio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcio3"
            android:textSize="17dp" />

        <RadioButton
            android:id="@+id/rbOpcio4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcio4"
            android:textSize="17dp" />
    </RadioGroup>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="SUBMIT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</LinearLayout>